--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -46,17 +46,26 @@
      "output_type": "display_data"
     },
     {
-     "ename": "ValueError",
-     "evalue": "Select(options=['red', 'orange', ...], value='red') parameter was not found in list of parameters of class Select",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 48\u001b[0m\n\u001b[0;32m     45\u001b[0m     render_actor\u001b[39m.\u001b[39mGetProperty()\u001b[39m.\u001b[39mSetColor(\u001b[39m*\u001b[39mcolor)\n\u001b[0;32m     46\u001b[0m     renWin\u001b[39m.\u001b[39mRender()  \u001b[39m# Trigger re-rendering to update the color\u001b[39;00m\n\u001b[1;32m---> 48\u001b[0m color_select\u001b[39m.\u001b[39;49mparam\u001b[39m.\u001b[39;49mwatch(color_change, color_select)\n\u001b[0;32m     51\u001b[0m \u001b[39m# Dataframe -> hvplot graph\u001b[39;00m\n\u001b[0;32m     52\u001b[0m coord_dict \u001b[39m=\u001b[39m {}\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\param\\parameterized.py:2454\u001b[0m, in \u001b[0;36mParameters.watch\u001b[1;34m(self_, fn, parameter_names, what, onlychanged, queued, precedence)\u001b[0m\n\u001b[0;32m   2450\u001b[0m \u001b[39mif\u001b[39;00m precedence \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m   2451\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mUser-defined watch callbacks must declare \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2452\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39ma positive precedence. Negative precedences \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2453\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39mare reserved for internal Watchers.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m-> 2454\u001b[0m \u001b[39mreturn\u001b[39;00m self_\u001b[39m.\u001b[39;49m_watch(fn, parameter_names, what, onlychanged, queued, precedence)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\param\\parameterized.py:2461\u001b[0m, in \u001b[0;36mParameters._watch\u001b[1;34m(self_, fn, parameter_names, what, onlychanged, queued, precedence)\u001b[0m\n\u001b[0;32m   2457\u001b[0m parameter_names \u001b[39m=\u001b[39m \u001b[39mtuple\u001b[39m(parameter_names) \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(parameter_names, \u001b[39mlist\u001b[39m) \u001b[39melse\u001b[39;00m (parameter_names,)\n\u001b[0;32m   2458\u001b[0m watcher \u001b[39m=\u001b[39m Watcher(inst\u001b[39m=\u001b[39mself_\u001b[39m.\u001b[39mself, \u001b[39mcls\u001b[39m\u001b[39m=\u001b[39mself_\u001b[39m.\u001b[39mcls, fn\u001b[39m=\u001b[39mfn, mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39margs\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m   2459\u001b[0m                   onlychanged\u001b[39m=\u001b[39monlychanged, parameter_names\u001b[39m=\u001b[39mparameter_names,\n\u001b[0;32m   2460\u001b[0m                   what\u001b[39m=\u001b[39mwhat, queued\u001b[39m=\u001b[39mqueued, precedence\u001b[39m=\u001b[39mprecedence)\n\u001b[1;32m-> 2461\u001b[0m self_\u001b[39m.\u001b[39;49m_register_watcher(\u001b[39m'\u001b[39;49m\u001b[39mappend\u001b[39;49m\u001b[39m'\u001b[39;49m, watcher, what)\n\u001b[0;32m   2462\u001b[0m \u001b[39mreturn\u001b[39;00m watcher\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\param\\parameterized.py:2396\u001b[0m, in \u001b[0;36mParameters._register_watcher\u001b[1;34m(self_, action, watcher, what)\u001b[0m\n\u001b[0;32m   2394\u001b[0m \u001b[39mfor\u001b[39;00m parameter_name \u001b[39min\u001b[39;00m parameter_names:\n\u001b[0;32m   2395\u001b[0m     \u001b[39mif\u001b[39;00m parameter_name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m self_\u001b[39m.\u001b[39mcls\u001b[39m.\u001b[39mparam:\n\u001b[1;32m-> 2396\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m parameter was not found in list of \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2397\u001b[0m                          \u001b[39m\"\u001b[39m\u001b[39mparameters of class \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m\n\u001b[0;32m   2398\u001b[0m                          (parameter_name, self_\u001b[39m.\u001b[39mcls\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m))\n\u001b[0;32m   2400\u001b[0m     \u001b[39mif\u001b[39;00m self_\u001b[39m.\u001b[39mself \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m what \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m   2401\u001b[0m         watchers \u001b[39m=\u001b[39m self_\u001b[39m.\u001b[39mself\u001b[39m.\u001b[39m_param_watchers\n",
-      "\u001b[1;31mValueError\u001b[0m: Select(options=['red', 'orange', ...], value='red') parameter was not found in list of parameters of class Select"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d2adb75f5f8846c68f77ac242f47b434",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BokehModel(combine_events=True, render_bundle={'docs_json': {'8a43ee38-0fae-45fc-998d-d926161d1b38': {'version…"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello blue\n",
+      "hello yellow\n"
      ]
     }
    ],
@@ -67,7 +76,7 @@
     "import pandas as pd\n",
     "import hvplot.pandas\n",
     "import pyvista as pv\n",
-    "pn.extension()\n",
+    "pn.extension('vtk')\n",
     "from vtk.util.colors import red, orange, yellow, green, blue, indigo, violet\n",
     "\n",
     "\n",
@@ -105,8 +114,13 @@
     "def color_change(event):\n",
     "    selected_color = event.new\n",
     "    color = color_dict[selected_color]\n",
-    "    render_actor.GetProperty().SetColor(*color)\n",
+    "    render_actor.GetProperty().SetColor(0, 0, 1)\n",
+    "    render_actor.GetProperty().SetRepresentationToWireframe()\n",
+    "    render_actor.SetScale(10, 10, 10)\n",
+    "\n",
     "    renWin.Render()  # Trigger re-rendering to update the color\n",
+    "    print('hello', event.new)\n",
+    "    ren.SetBackground(0, 0, 1.0000)\n",
     "\n",
     "color_select.param.watch(color_change, 'value')\n",
     "\n",
@@ -134,7 +148,7 @@
     "\n",
     "\n",
     "# Grid\n",
-    "gridspec = pn.GridSpec(sizing_mode='fixed', min_height=200)\n",
+    "gridspec = pn.GridSpec(sizing_mode='stretch_both', min_height=200)\n",
     "gridspec[0, 1:2] = geom_pane1\n",
     "gridspec[0, 2:3] =  geom_pane2\n",
     "gridspec[0, 0] = color_select\n",
